[gd_scene load_steps=19 format=3 uid="uid://cvp6hclut8npp"]

[ext_resource type="Texture2D" uid="uid://c6lv42n7tjsx" path="res://Assets/下城区/战斗场景/邪帽/混合镰刀.png" id="1_0o4g4"]
[ext_resource type="Script" uid="uid://buhjbortrr0ho" path="res://Assets/下城区/战斗场景/邪帽/大镰刀.gd" id="1_uejp3"]
[ext_resource type="Script" uid="uid://6hb4a5ytivjf" path="res://Assets/下城区/战斗场景/邪帽/轨迹.gd" id="3_p50xy"]

[sub_resource type="Curve" id="Curve_brggg"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(0.331461, 0.105051), 0.484885, 0.484885, 0, 0, Vector2(0.685393, 0.407242), 1.17234, 1.17234, 0, 0, Vector2(1, 0.990683), 2.82116, 0.0, 0, 0]
point_count = 4

[sub_resource type="Gradient" id="Gradient_anpin"]
offsets = PackedFloat32Array(0, 0.645985, 1)
colors = PackedColorArray(0.787862, 0.357487, 0.170654, 0, 0.79, 0.342333, 0, 0.745098, 0.19, 0, 0.00950004, 0.745098)

[sub_resource type="AtlasTexture" id="AtlasTexture_m226w"]
atlas = ExtResource("1_0o4g4")
region = Rect2(4200, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_bvp1a"]
atlas = ExtResource("1_0o4g4")
region = Rect2(4900, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_lxs16"]
atlas = ExtResource("1_0o4g4")
region = Rect2(0, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_oqy3o"]
atlas = ExtResource("1_0o4g4")
region = Rect2(2100, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_e0ihu"]
atlas = ExtResource("1_0o4g4")
region = Rect2(2800, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr0ys"]
atlas = ExtResource("1_0o4g4")
region = Rect2(3500, 700, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_e3gub"]
atlas = ExtResource("1_0o4g4")
region = Rect2(700, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_58v4q"]
atlas = ExtResource("1_0o4g4")
region = Rect2(1400, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_rgyeo"]
atlas = ExtResource("1_0o4g4")
region = Rect2(2100, 1400, 700, 700)

[sub_resource type="AtlasTexture" id="AtlasTexture_bgdfw"]
atlas = ExtResource("1_0o4g4")
region = Rect2(2800, 1400, 700, 700)

[sub_resource type="SpriteFrames" id="SpriteFrames_08fn6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m226w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bvp1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxs16")
}],
"loop": true,
"name": &"Spin",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oqy3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e0ihu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr0ys")
}],
"loop": false,
"name": &"Start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e3gub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58v4q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rgyeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bgdfw")
}],
"loop": false,
"name": &"Stop",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_html4"]
radius = 62.0081

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ljwns"]
size = Vector2(4737, 5331)

[node name="大镰刀" type="Area2D"]
script = ExtResource("1_uejp3")

[node name="Node" type="Node" parent="."]

[node name="Line2D" type="Line2D" parent="Node"]
width = 130.0
width_curve = SubResource("Curve_brggg")
default_color = Color(0.372988, 0.261847, 0.295672, 1)
gradient = SubResource("Gradient_anpin")
script = ExtResource("3_p50xy")
point_count = 55

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -48)
sprite_frames = SubResource("SpriteFrames_08fn6")
animation = &"Spin"
offset = Vector2(155, 5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -48)
shape = SubResource("CircleShape2D_html4")

[node name="PlayerCheck" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCheck"]
position = Vector2(2.5, 5.5)
shape = SubResource("RectangleShape2D_ljwns")
debug_color = Color(0.633061, 0.476976, 0.620167, 0.12549)

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
